<resources>
    <string name="app_name">Interim</string>
    <string name="title_home">Recherche</string>
    <string name="title_dashboard">Tableau de bord</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_offres">Offre</string>
    <string name="creer_offre">Proposer une offre</string>
    <string name="offre_name">Intitulé</string>
    <string name="offre_metier">Métier</string>
    <string name="offre_desc">Description</string>
    <string name="offre_debut">Date de début</string>
    <string name="offre_fin">Date de fin</string>
    <string name="offre_remuneration">Rémuneration</string>
    <string name="offre_creer">Créer</string>
    <string name="interimaire">Interimaire</string>
    <string name="employer">Employeur</string>
    <string name="agence">Agence</string>
    <string name="remember">Rester connecté</string>
    <string name="title_compte">Profil</string>
    <string name="email">Email</string>
    <string name="password">Mot de passe</string>
    <string name="sign_in">Se connecter</string>
    <string name="offre_address">Ville</string>
    <string name="confirm">Confirmer</string>
    <string name="cancel">Annuler</string>
    <string name="resend">Renvoyer</string>
    <string name="tv_company_name">Nom de l\'entreprise *</string>
    <string name="et_company_name">Entrez le nom de l\'entreprise</string>
    <string name="tv_departement_service">Nom du service/département</string>
    <string name="et_departement_service">Informatique</string>
    <string name="tv_sub_departement_service">Nom du sous-service/sous-département</string>
    <string name="et_sub_departement_service">Sécurité</string>
    <string name="tv_company_id">SIRET *</string>
    <string name="et_company_id">XXX XXX XXX XXXXX</string>
    <string name="tv_contact_name_1">Nom contact 1</string>
    <string name="tv_contact_name_2">Nom contact 2</string>
    <string name="et_contact_name_1">Simula Tom</string>
    <string name="et_contact_name_2">Azevedo Gomes Daniel</string>
    <string name="tv_mail_1">Email 1 *</string>
    <string name="et_mail_1">premier.mail@gmail.com</string>
    <string name="tv_mail_2">Email 2</string>
    <string name="et_mail_2">second.mail@gmail.com</string>
    <string name="tv_phone_1">Numéro de téléphone 1</string>
    <string name="tv_phone_2">Numéro de téléphone 2</string>
    <string name="tv_address">Adresse *</string>
    <string name="et_address">52 rue montmartre 75002 Paris</string>
    <string name="button_sign_up">S\'inscrire</string>
    <string name="tv_first_name">Prenom *</string>
    <string name="et_first_name">Tom</string>
    <string name="tv_last_name">Nom *</string>
    <string name="et_last_name">Simula</string>
    <string name="tv_birthday">Date de naissance</string>
    <string name="et_birthday">JJ/MM/AAAA</string>
    <string name="tv_birthday_with_asterisk">Date de naissance *</string>

    <string name="et_email">mon.mail@gmail.com</string>
    <string name="tv_email">Email</string>
    <string name="et_phone">XX XX XX XX XX</string>
    <string name="tv_phone">Numéro de téléphone</string>
    <string name="tv_nationality">Nationalité</string>
    <string name="tv_nationality_with_asterisk">Nationality *</string>
    <string name="et_nationality">Français</string>
    <string name="tv_city">Ville</string>
    <string name="et_city">Montpellier</string>
    <string name="tv_CV">CV</string>
    <string name="tv_CV_with_asterisk">CV *</string>
    <string name="button_upload_file">Charger un fichier</string>
    <string name="tv_password">Mot de passe *</string>
    <string name="et_password">Entrez votre mot de passe</string>
    <string name="title_Sign_up">Inscription</string>
    <string name="inscription_type">Type d\'inscription</string>
    <string name="Agency">Agence</string>
    <string name="Employer">Employeur</string>
    <string name="temporary_worker">Interimaire</string>
    <string name="lettre_motivation">Charger un fichier</string>
    <string name="tv_LettreMotivation">Lettre de motivation</string>
    <string name="candidature_button">Postuler</string>
    <string name="title_candidature">Candidature</string>
    <string name="login_guest">Connexion anonyme</string>
    <string name="don_t_have_an_account">Vous n\'avez pas de compte?</string>
    <string name="or">Ou</string>
    <string name="connection">Connection</string>
    <string name="signup">Inscription</string>
    <string name="title_inapp_connection">Connection</string>
    <string name="title_inapp_inscription">Sign Up</string>
    <string name="tv_must_fill1">Un email ou un numéro de téléphone doit obligatoirement être rempli pour pouvoir confirmer le compte.</string>
    <string name="tv_must_fill2">Les champs avec * doivent obligatoirement être rempli.</string>
    <string name="tv_send_auth">Pour renvoyer le mail/SMS appuyer sur le boutton ci-dessous</string>
    <string name="tv_auth_code">Entrer le code reçu</string>
    <string name="tv_commentary">Commentaire</string>
    <string name="et_commentary">Entrez votre commentaire</string>
    <string name="home">Mes candidatures</string>
    <string name="offres_enregistrees">Offres enregistrées</string>
    <string name="candidatures">Candidatures</string>
    <string name="offres">Offres</string>
    <string name="tabs">tabs</string>
    <string name="date_label">"Fait le "</string>
    <string name="etat_label">"Status : "</string>
    <string name="title_candidature_detail">Candidature</string>
    <string name="dashboard_search_label">Rechercher</string>
    <string name="btn_show_cv">Voir CV</string>
    <string name="button_show_lm">Voir Lettre de Motivation</string>
    <string name="info_worker">Afficher informations du candidat</string>
    <string name="first_name">Prenom</string>
    <string name="last_name">Nom</string>
    <string name="company_name">Nom de l\'entreprise</string>
    <string name="company_id">SIRET</string>
    <string name="mail_1">Email 1</string>
    <string name="address">Adresse</string>
    <string name="btn_modifier_infos">Modifier les informations</string>
    <string name="btn_edit">Confirmer les modifications</string>
    <string name="btn_deconnextion">Se déconnecter</string>
    <string name="warning_form">Ce champ est incorrect</string>
    <string name="warning_sign_in">Email ou mot de passe incorrect</string>
    <string name="publier_offre">Créer une offre</string>
    <string name="hide_info_worker">Masquer les informations</string>
    <string name="offre_confirm">Confirmer modifications</string>
    <string name="btn_delete">Supprimer offre</string>
    <string name="postuler">Postuler</string>
    <string name="enregistrer">Enregistrer</string>
    <string name="popup_location_title">Permission localisation</string>
    <string name="popup_location_message">Cette application nécessite l\'accès a votre localisation afin de vous proposer des offres en fonction de celle-ci.</string>
    <string name="popup_location_grant">Accepter</string>
    <string name="popup_location_deny">Refuser</string>
    <string name="button_accept">Accepter</string>
    <string name="button_refuse">Refuser</string>
    <string name="popup_accept_message">Accepter cette candidature?</string>
    <string name="popup_refuse_message">Refuser cette candidature?</string>
    <string name="popup_candidature_dialog_title">Confirmation de réponse</string>
    <string name="candidature_accepted">La candidature a été acceptée</string>
    <string name="candidature_refused">La candidature a été refusée</string>
    <string name="yes_btn">Oui</string>
    <string name="no_btn">Non</string>
    <string name="copy_btn">Copier dans le presse-papier</string>
    <string name="don_t_have_an_account_sign_up">Vous n\'avez pas de compte ? Inscrivez-vous !</string>
    <string name="unsave">Supprimer enregistrement</string>
    <string name="warning_mail">L\'email est deja utiliser</string>
    <string name="location_attente">Merci d\'attendre tant qu\'on recupère votre localisation</string>
    <string name="warning_waiting">Un administrateur doit confirmer votre inscription</string>
    <string name="title_stats">Statistiques</string>
    <string name="users">Utilisateurs</string>
    <string name="created_by">Crée par: </string>
    <string name="go_to_offer">Voir l\'offre</string>
    <string name="ignore">Ignorer</string>
    <string name="report">Signaler</string>
    <string name="report_offer">Signaler l\'offre</string>
    <string name="report_done">Offre Signalé</string>
    <string name="pull_out">Désister</string>
    <string name="contact_employer">Contacter employeur</string>
    <string name="stat_offer">Statistiques des offres</string>
    <string name="stat_user">Statistiques des utilisateurs</string>
</resources>
