<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    tools:context="ui.connection.SignUpInterimFragment">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/candidature_prenom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_first_name"
            android:layout_marginTop="8dp"/>

        <EditText
            android:id="@+id/candidature_prenom_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/candidature_prenom"
            android:hint="@string/et_first_name"
            android:inputType="text"
            android:minHeight="48dp"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/candidature_nom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_last_name"
            android:layout_below="@+id/candidature_prenom_edit"
            android:layout_marginTop="8dp"/>

        <EditText
            android:id="@+id/candidature_nom_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/candidature_nom"
            android:hint="@string/et_last_name"
            android:inputType="text"
            android:minHeight="48dp"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/candidature_anniversaire"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_birthday"
            android:layout_below="@+id/candidature_nom_edit"
            android:layout_marginTop="8dp"/>

        <EditText
            android:id="@+id/candidature_anniversaire_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/candidature_anniversaire"
            android:hint="@string/et_birthday"
            android:inputType="date"
            android:minHeight="48dp"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/candidature_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_email"
            android:layout_below="@+id/candidature_anniversaire_edit"
            android:layout_marginTop="8dp"/>

        <EditText
            android:id="@+id/candidature_email_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/candidature_email"
            android:hint="@string/et_email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/candidateure_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_phone"
            android:layout_below="@+id/candidature_email_edit"
            android:layout_marginTop="8dp"/>

        <EditText
            android:id="@+id/candidature_phone_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/candidateure_phone"
            android:hint="@string/et_phone"
            android:inputType="phone"
            android:minHeight="48dp"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/candidature_nationality"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_nationality"
            android:layout_below="@+id/candidature_phone_edit"
            android:layout_marginTop="8dp"/>

        <EditText
            android:id="@+id/candidature_nationality_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/candidature_nationality"
            android:hint="@string/et_nationality"
            android:inputType="text"
            android:minHeight="48dp"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/candidature_ville"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_city"
            android:layout_below="@+id/candidature_nationality_edit"
            android:layout_marginTop="8dp"/>

        <EditText
            android:id="@+id/candidature_ville_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/candidature_ville"
            android:hint="@string/et_city"
            android:inputType="text"
            android:minHeight="48dp"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/candidature_lettre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_LettreMotivation"
            android:layout_below="@+id/candidature_ville_edit"
            android:layout_marginTop="8dp"/>


        <Button
            android:id="@+id/candidature_lettre_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/candidature_lettre"
            android:text="@string/lettre_motivation"/>

        <TextView
            android:id="@+id/candidature_cv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_CV"
            android:layout_below="@+id/candidature_lettre_button"
            android:layout_marginTop="8dp"/>

        <Button
            android:id="@+id/candidature_cv_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/candidature_cv"
            android:text="@string/button_upload_file"/>


        <Button
            android:id="@+id/candidature_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/candidature_cv_button"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="200dp"
            android:text="@string/candidature_button"
            tools:ignore="TouchTargetSizeCheck" />

    </RelativeLayout>
</ScrollView>